# scalapack

./: .gitignore  CMakeLists.txt  Makefile  README  SLmake.inc  SLmake.inc.example  scalapack.pc.in  scalapack_build.cmake
BLACS/SRC/: BI_Arecv.c  BI_ArgCheck.c  BI_Asend.c  BI_BeComb.c  BI_BlacsAbort.c  BI_BlacsErr.c  BI_BlacsWarn.c  BI_BuffIsFree.c  BI_ContxtNum.c  BI_EmergencyBuff.c  BI_GetBuff.c  BI_GetMpiGeType.c  BI_GetMpiTrType.c  BI_GlobalVars.c  BI_HypBR.c  BI_HypBS.c  BI_IdringBR.c  BI_IdringBS.c  BI_MpathBR.c  BI_MpathBS.c  BI_MringComb.c  BI_Pack.c  BI_Rsend.c  BI_Srecv.c  BI_SringBR.c  BI_SringBS.c  BI_Ssend.c  BI_TransDist.c  BI_TransUserComm.c  BI_TreeBR.c  BI_TreeBS.c  BI_TreeComb.c  BI_Unpack.c  BI_UpdateBuffs.c  BI_cMPI_amn.c  BI_cMPI_amn2.c  BI_cMPI_amx.c  BI_cMPI_amx2.c  BI_cMPI_sum.c  BI_cvvamn.c  (+127 more)
BLACS/TESTING/: CMakeLists.txt  Cbt.c  Cbt.h  Makefile  blacstest.f  btprim.f  runtest.cmake  tools.f
PBLAS/SRC/: CMakeLists.txt  Makefile  PBblacs.h  PBblas.h  PBpblas.h  PBtools.h  pblas.h  pcagemv_.c  pcahemv_.c  pcamax_.c  pcatrmv_.c  pcaxpy_.c  pccopy_.c  pcdotc_.c  pcdotu_.c  pcgeadd_.c  pcgemm_.c  pcgemv_.c  pcgerc_.c  pcgeru_.c  pchemm_.c  pchemv_.c  pcher2_.c  pcher2k_.c  pcher_.c  pcherk_.c  pcscal_.c  pcsscal_.c  pcswap_.c  pcsymm_.c  pcsyr2k_.c  pcsyrk_.c  pctradd_.c  pctranc_.c  pctranu_.c  pctrmm_.c  pctrmv_.c  pctrsm_.c  pctrsv_.c  pdagemv_.c  (+91 more)
PBLAS/SRC/PBBLAS/: CMakeLists.txt  Makefile  pbcmatadd.f  pbctran.f  pbctrget.f  pbctrnv.f  pbctrsrt.f  pbctrst1.f  pbcvecadd.f  pbdmatadd.f  pbdtran.f  pbdtrget.f  pbdtrnv.f  pbdtrsrt.f  pbdtrst1.f  pbdvecadd.f  pbsmatadd.f  pbstran.f  pbstrget.f  pbstrnv.f  pbstrsrt.f  pbstrst1.f  pbsvecadd.f  pbzmatadd.f  pbztran.f  pbztrget.f  pbztrnv.f  pbztrsrt.f  pbztrst1.f  pbzvecadd.f
PBLAS/SRC/PTOOLS/: CMakeLists.txt  Makefile  PB_CGatherV.c  PB_CInOutV.c  PB_CInOutV2.c  PB_CInV.c  PB_CInV2.c  PB_COutV.c  PB_CScatterV.c  PB_CVMcontig.c  PB_CVMinit.c  PB_CVMloc.c  PB_CVMnpq.c  PB_CVMpack.c  PB_CVMswp.c  PB_CVMupdate.c  PB_Cabort.c  PB_Cainfog2l.c  PB_CargFtoC.c  PB_Cbinfo.c  PB_Cchkmat.c  PB_Cchkvec.c  PB_Cconjg.c  PB_Cctypeset.c  PB_Cdescribe.c  PB_Cdescset.c  PB_Cdtypeset.c  PB_Cfirstnb.c  PB_Cg2lrem.c  PB_Cgcd.c  PB_Cgetbuf.c  PB_Cindxg2p.c  PB_Cinfog2l.c  PB_Citypeset.c  PB_Clastnb.c  PB_Clcm.c  PB_Cmalloc.c  PB_Cnnxtroc.c  PB_Cnpreroc.c  PB_Cnumroc.c  (+64 more)
PBLAS/SRC/PTZBLAS/: CMakeLists.txt  Makefile  cagemv.f  cahemv.f  casymv.f  catrmv.f  ccshft.f  chescal.f  cmmadd.f  cmmcadd.f  cmmdda.f  cmmddac.f  cmmddact.f  cmmddat.f  cmmtadd.f  cmmtcadd.f  crshft.f  cset.f  csymv.f  csyr.f  csyr2.f  ctzcnjg.f  ctzpad.f  ctzpadcpy.f  ctzscal.f  cvvdotc.f  cvvdotu.f  dagemv.f  dascal.f  dasqrtb.f  dasymv.f  datrmv.f  dcshft.f  dmmadd.f  dmmcadd.f  dmmdda.f  dmmddac.f  dmmddact.f  dmmddat.f  dmmtadd.f  (+61 more)
PBLAS/TESTING/: CMakeLists.txt  Makefile  dlamch.f  pblastst.f  pcblas1tst.f  pcblas2tst.f  pcblas3tst.f  pcblastst.f  pdblas1tst.f  pdblas2tst.f  pdblas3tst.f  pdblastst.f  psblas1tst.f  psblas2tst.f  psblas3tst.f  psblastst.f  pzblas1tst.f  pzblas2tst.f  pzblas3tst.f  pzblastst.f  slamch.f
PBLAS/TIMING/: CMakeLists.txt  Makefile  pblastim.f  pcblas1tim.f  pcblas2tim.f  pcblas3tim.f  pcblastim.f  pdblas1tim.f  pdblas2tim.f  pdblas3tim.f  pdblastim.f  psblas1tim.f  psblas2tim.f  psblas3tim.f  psblastim.f  pzblas1tim.f  pzblas2tim.f  pzblas3tim.f  pzblastim.f
REDIST/TESTING/: CMakeLists.txt  Makefile  pcgemrdrv.c  pctrmrdrv.c  pdgemrdrv.c  pdtrmrdrv.c  pigemrdrv.c  pitrmrdrv.c  psgemrdrv.c  pstrmrdrv.c  pzgemrdrv.c  pztrmrdrv.c  redist.h
TESTING/: CMakeLists.txt
TESTING/EIG/: CMakeLists.txt  Makefile  pcevcdriver.f  pcevcinfo.f  pcgehdrv.f  pcgsepchk.f  pcgsepdriver.f  pcgseptst.f  pclafchk.f  pcsepchk.f  pcseprtst.f  pcsepsubtst.f  pdbrddriver.f  pdgehdrv.f  pdgsepsubtst.f  pdgseptst.f  pdhrddriver.f  pdhrdinfo.f  pdlatran.f  pdsdpsubtst.f  pdsepchk.f  pdsepdriver.f  pdsepinfo.f  pdsepqtq.f  pdseprsubtst.f  pdseprtst.f  pdsvdtst.f  psgehdrv.f  psgsepchk.f  pshrddriver.f  pshseqrdriver.f  pslagge.f  pslasizegsep.f  pslasizesep.f  psmatgen.f  psrptseptst.f  pssepchk.f  pssepdriver.f  pssepinfo.f  psseprtst.f  (+18 more)
TESTING/LIN/: CMakeLists.txt  Makefile  pcgbinfo.f  pcgbmv1.f  pcinvchk.f  pclaschk.f  pclsinfo.f  pcmatgen.f  pcpbmv1.f  pcqrinfo.f  pcqrt13.f  pddbmv1.f  pddtlaschk.f  pdgbinfo.f  pdgeqrrv.f  pdgetrrv.f  pdludriver.f  pdpbmv1.f  pdpotrrv.f  pdptlaschk.f  pdqrinfo.f  psdtlaschk.f  psgbmv1.f  psgelqrv.f  psinvdriver.f  psqrdriver.f  psqrinfo.f  psqrt16.f  pzdbmv1.f  pzdtinfo.f  pzgbinfo.f  pzgetrrv.f  pzinvdriver.f  pzlltdriver.f  pzluinfo.f  pzpbmv1.f  pzpotrrv.f  pzptinfo.f  pzptlaschk.f  pzqrinfo.f  (+1 more)
TESTING/cmake/: scalapack_tests_helpers.cmake
TESTING/package/: CMakeLists.txt
TESTING/package/deprecated_targets/: CMakeLists.txt
TESTING/package/find_package/: CMakeLists.txt
TESTING/traditional/: CMakeLists.txt
TESTING/traditional/EIG/: CMakeLists.txt  Makefile  pcbrddriver.f  pcbrdinfo.f  pcevcdriver.f  pcevcinfo.f  pcgebdrv.f  pcgehdrv.f  pcget22.f  pcgsepchk.f  pcgsepdriver.f  pcgsepreq.f  pcgsepsubtst.f  pcgseptst.f  pchetdrv.f  pchrddriver.f  pchrdinfo.f  pclagsy.f  pclasizegsep.f  pclasizeheevx.f  pclasizesep.f  pclasizesepr.f  pclatms.f  pclatran.f  pcmatgen.f  (+156 more)
TOOLS/: CMakeLists.txt  Makefile  SL_gridreshape.c  SL_init.f  ccdotc.f  ccdotu.f  chk1mat.f  clatcpy.f  cmatadd.f  dddot.f  desc_convert.f  descinit.f  descset.f  dlatcpy.f  dmatadd.f  dsasum.f  dscasum.f  dscnrm2.f  dsnrm2.f  iceil.f  ilacpy.f  ilcm.f  indxg2l.f  indxg2p.f  indxl2g.f  infog1l.f  infog2l.f  npreroc.f  numroc.f  pcchekpad.f  pccol2row.f  pcelget.f  pcelset.f  pcelset2.f  pcfillpad.f  pchkxmat.f  pclaprnt.f  pclaread.f  pclawrite.f  pcmatadd.f  (+56 more)
TOOLS/LAPACK/: CMakeLists.txt  Makefile  clagge.f  claghe.f  clagsy.f  clarnd.f  clarnv.f  clarot.f  clatm1.f  clatms.f  dlagge.f  dlagsy.f  dlaran.f  dlarnd.f  dlarot.f  dlatm1.f  dlatms.f  icopy.f  ilaenv.f  slabad.f  slagge.f  slagsy.f  slaran.f  slarnd.f  slarot.f  slasq5.f  slatm1.f  slatms.f  zlagge.f  zlaghe.f  zlagsy.f  zlarnd.f  zlarnv.f  zlarot.f  zlatm1.f  zlatms.f
(+1954 files in other folders)
